# opengl-adventures

./: .gitignore  README.md
opengl/helloShaders/: comp.sh  main.cpp  output  shader.cpp
opengl/helloShaders/shaders/: fragmentShader2.glsl  rainbow.glsl
opengl/helloTriangle/: comp.sh  main.cpp  output
opengl/helloWindow/: glad.c  main.cpp
opengl/src/: comp.sh  main.cpp  output
opengl/src/include/: shader.h
opengl/src/lib/: stb_image.h
opengl/src/shaders/: rainbow.glsl
pong/: glad.c  main.cpp  meson.build  shader.cpp  shader.hpp
pong/.cache/clangd/index/: glad.c.4971797742958F5D.idx  glad.h.505F8A22F1C98AB8.idx  khrplatform.h.3C4DF985AAA96F9E.idx  main.cpp.A9CB127F462BC4F6.idx
pong/include/glad/: glad.h
pong/shaders/: color.glsl  vertexShader.glsl
shaderPlayground/: main.cpp  meson.build
shaderPlayground/.cache/clangd/index/: glad.c.22204026EBD7BBC2.idx  glad.h.609F977E74BD0DCE.idx  main.cpp.ED366CAFB6BBB22B.idx  shader.cpp.1E117D7398AC78B4.idx  shader.hpp.C423AE6B2F686C9D.idx
shaderPlayground/shaders/: fragment.glsl  vertexShader.glsl
